# EcoPlay

./: .env.example  .gitignore  README.md
apps/agent-dashboard/: package.json
apps/web/: package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/handlers/: auth.rs  leaderboard.rs  mod.rs  payments.rs  submissions.rs  users.rs
backend/src/api/middleware/: mod.rs
backend/src/api/routes/: mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 001_create_users.sql  002_create_agents.sql  003_create_submissions.sql  004_create_transactions.sql  mod.rs
backend/src/db/queries/: agents.rs  leaderboard.rs  mod.rs  submissions.rs  transactions.rs  users.rs
backend/src/errors/: mod.rs
backend/src/models/: agent.rs  mod.rs  submission.rs  transaction.rs  user.rs
backend/src/services/: mod.rs
backend/src/services/auth/: mod.rs
backend/src/services/leaderboard/: mod.rs
backend/src/services/payments/: mod.rs
backend/src/services/rewards/: mod.rs
backend/src/services/submissions/: mod.rs
backend/src/stellar/: mod.rs
docs/api/: README.md
docs/architecture/: README.md
docs/flows/: README.md
infrastructure/: .env.example
infrastructure/docker/: Dockerfile.backend  docker-compose.yml
infrastructure/nginx/: nginx.conf
infrastructure/scripts/: dev-db.sh  init-db.sql  seed.sql
